<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2010 Tobias Teunissen
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:fillViewport="true"
	android:layout_height="wrap_content">
	<RelativeLayout android:layout_width="fill_parent"
		android:id="@+id/rl1" android:layout_height="wrap_content">
		<TextView android:layout_height="wrap_content" android:textSize="20dip" android:layout_width="fill_parent" android:gravity="center" android:id="@+id/details_title" android:layout_marginBottom="10dip"></TextView><TableLayout android:layout_height="wrap_content"
			android:id="@+id/tb1" android:layout_below="@+id/details_title" android:layout_centerInParent="true" android:layout_width="fill_parent">
			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/row1">
				<TextView android:text="@string/detail_distance"
					android:paddingRight="15dp" />
				<TextView android:id="@+id/detail_distance" />
			</TableRow>

			<TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/row3" android:layout_below="@+id/row2">
				<TextView android:text="@string/detail_averagespeed" android:paddingRight="15dp" />
				<TextView android:id="@+id/detail_averagespeed" />
			</TableRow>

			

			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/row4"
				android:layout_below="@+id/row3">
				<TextView android:text="@string/detail_maximumspeed"
					android:paddingRight="15dp" />
				<TextView android:id="@+id/detail_maximumspeed" />
			</TableRow><TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/row8" android:layout_below="@+id/row7">
				<TextView android:text="@string/detail_altitudeUp" android:paddingRight="15dp" />
				<TextView android:id="@+id/detail_altitideUp" />
			</TableRow><TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/row5" android:layout_below="@+id/row4">
				<TextView android:text="@string/detail_points" android:paddingRight="15dp" />
				<TextView android:id="@+id/detail_points" />
			</TableRow><TableRow android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/row2" android:layout_below="@+id/row1">
				<TextView android:paddingRight="15dp" android:text="@string/details_average_heart_rate"/>
				<TextView android:id="@+id/detail_averageheartbeat"/>
			</TableRow>

			

			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/row6"
				android:layout_below="@+id/row5">
				<TextView android:paddingRight="15dp" android:text="@string/detail_max_heart_rate"/>

				<TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/details_max_heartbeat"></TextView>
			</TableRow>

			<TableRow android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:id="@+id/row7"
				android:layout_below="@+id/row6">
				<TextView android:paddingRight="15dp" android:text="@string/detail_average_cadence"/>

				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/detail_average_cadence"></TextView>
			</TableRow>

			

			

		</TableLayout>
		<LinearLayout android:id="@+id/LinearLayout01"
			android:layout_width="fill_parent" android:layout_below="@+id/tb1"
			android:layout_height="250dip" android:layout_marginRight="15dip">


</LinearLayout><LinearLayout android:id="@+id/LinearLayout02" android:layout_width="fill_parent" android:layout_below="@+id/LinearLayout01" android:layout_marginRight="15dip" android:layout_height="350dip">
</LinearLayout>
	<LinearLayout android:id="@+id/LinearLayout03" android:layout_width="fill_parent" android:layout_below="@+id/LinearLayout02" android:layout_height="250dip" android:layout_marginRight="15dip">

</LinearLayout><LinearLayout android:id="@+id/LinearLayout05" android:layout_width="fill_parent" android:layout_height="250dip" android:layout_below="@+id/LinearLayout04"></LinearLayout><LinearLayout android:id="@+id/LinearLayout04" android:layout_width="fill_parent" android:layout_height="250dip" android:layout_below="@+id/LinearLayout03" android:layout_marginRight="15dip">
</LinearLayout>


</RelativeLayout>
</ScrollView>
